DevOps-Project-03/openshift/service-route-hpa.yaml
# ==============================================
# Service
# ==============================================
apiVersion: v1
kind: Service
metadata:
  name: devops-java-app
  namespace: devops-project-03
  labels:
    app: devops-java-app
spec:
  selector:
    app: devops-java-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
# ==============================================
# OpenShift Route (exposes app externally with TLS)
# ==============================================
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: devops-java-app
  namespace: devops-project-03
spec:
  to:
    kind: Service
    name: devops-java-app
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
